# graph_2_stl

./: main.py  out.stl  pyproject.toml
graphs/ucidata-zachary/: graph.edges
